usage deprecation updates